[components] fix validation icon alignment on array items

--- a/packages/@sanity/components/src/validation/ValidationStatus.css
+++ b/packages/@sanity/components/src/validation/ValidationStatus.css
@@ -4,7 +4,6 @@
   opacity: 1;
   outline: none;
   z-index: 10;
-  margin-right: var(--small-padding);
 
   @nest &:hover {
     opacity: 1;
